# fastapi-psql

./: README.md  pyproject.toml
fastapibic/: actions.py  db.py  main.py  models.py  schema.py
