[tool.poetry]
name = "fastapibic"
version = "0.1.0"
description = ""
authors = ["smyja <akposlive59@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.26"
psycopg2-binary = "^2.9.1"
uvicorn = "^0.15.0"
isort = "^5.10.0"
black = "^21.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
